# Rift_TerminalV2

./: .gitignore  .mcp.json  AUDIT_2026-04-27.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEFERRED.md  ERROR_TO_AGENT_HANDOFF_SPEC.md  INDEX_GRAPH_LAYOUT_SPEC.md  LICENSE  README.md  RELEASING.md  RIFT_IA_NORTHSTAR.md  RIFT_V2_PHASE_11_PLAN.md  RIFT_V2_PHASE_PLAN.md  RIFT_V2_VISION.md  ZONES.md  cockpit-detached.html  deny.toml  index.html  notif-detached.html  package-lock.json  package.json  rift-v2-mockup-gui.html  rift-v2-mockup-integrated.html  rift-v2-mockup.html  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.aegis/: verify.toml
.aegis/lessons/rift/: 2026-04-26.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml
crates/index-core/: Cargo.toml
crates/index-core/src/: lib.rs
crates/rift-aegis/: Cargo.toml
crates/rift-aegis/src/: detect.rs  lib.rs  snapshot.rs
crates/rift-bus/: Cargo.toml
crates/rift-bus/src/: bus.rs  compaction.rs  config.rs  correlation.rs  envelope.rs  ipc.rs  keyring.rs  lib.rs  session_compare.rs  session_logger.rs  session_reader.rs  snapshot.rs
crates/rift-bus/src/translators/: agent.rs  commands.rs  enrichment.rs  errors.rs  fs.rs  gguf.rs  index.rs  lane.rs  llm.rs  llm_anthropic.rs  llm_cli.rs  llm_gemini.rs  llm_process.rs  llm_server.rs  mod.rs  sentinel.rs  status.rs  vault_walker.rs
crates/rift-bus/src/translators/lane_prelude/: bash.sh  pwsh.ps1  zsh.sh
crates/rift-cli/: Cargo.toml
crates/rift-cli/src/: chat.rs  lib.rs  llm.rs  main.rs  session.rs
crates/rift-core/: Cargo.toml
crates/rift-core/src/: lib.rs  process.rs  pty.rs  shell.rs
crates/rift-core/tests/: cu3_conpty_osc_fidelity.rs
crates/rift-mcp/: Cargo.toml
crates/rift-mcp/src/: host_bridge.rs  jsonrpc.rs  lib.rs  main.rs
crates/rift-mcp/src/tools/: mod.rs
crates/rift-mcp/tests/: host_bridge_wire.rs
crates/rift-router/: Cargo.toml
crates/rift-router/src/: classifier.rs  lib.rs  profiles.rs  tags.rs
crates/rift-router/tests/: roster_routing.rs
decisions/: D-014_rift_mcp_v1_plan.md  §10.14_8.6_enrichment_visual_treatment.md  §10.15_real-time_update_mechanism.md  §10.17_agent_tab_grouping_filtering.md  §10.18_graph_library.md  §10.1_live_lane_classification.md
docs/: EARLY_ACCESS_SCOPE.md  ENSEMBLE_ROUTER_PHASE1_CORRECTED.md  MODEL_METRICS.md  PHASE3-confidence-gated-escalation.md  RELEASE_RUNBOOK.md  getting-started.md  phase3-calibration.py
plugins/aegis-plugin/: README.md
plugins/aegis-plugin/.claude-plugin/: plugin.json
plugins/aegis-plugin/commands/: aegis-help.md
plugins/aegis-plugin/hooks/: maintenance-banner.md  session-context.md
plugins/aegis-plugin/skills/aegis/: SKILL.md
plugins/aegis-plugin/skills/aegis/scripts/: maintenance-banner.mjs  maintenance-check.mjs  maintenance-update.mjs
plugins/index-plugin/: README.md
plugins/index-plugin/.claude-plugin/: plugin.json
plugins/index-plugin/commands/: index-setup.md
plugins/index-plugin/hooks/: session-index.md
plugins/index-plugin/skills/index-query/: SKILL.md
plugins/rift-mcp-plugin/: .mcp.json  README.md
plugins/rift-mcp-plugin/.claude-plugin/: marketplace.json  plugin.json
plugins/rift-mcp-plugin/commands/: rift-status.md
plugins/rift-mcp-plugin/hooks/: session-start.md
src/: App.svelte  CockpitDetached.svelte  NotifDetached.svelte  app.d.ts  main-cockpit-detached.ts  main-notif-detached.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  notif-detached.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: capture.rs  cockpit_window.rs  command_history.rs  feature_pipeline.rs  file_preview.rs  git_status.rs  health_collector.rs  index_bridge.rs  integrations.rs  lib.rs  llm_commands.rs  main.rs  mcp_host.rs  notif_window.rs  profiles.rs  resource_monitor.rs  session_timeline.rs  todo_scan.rs
src/lib/: AegisTabContent.svelte  AegisTabRenderer.svelte  AgentGantt.svelte  AgentsTabContent.svelte  AnnotationPopover.svelte  BlockActionMenu.svelte  BookmarksPanel.svelte  BusTailTabContent.svelte  CommandIntelligencePanel.svelte  CommandPalette.svelte  ControlActions.svelte  CorrelationBadge.svelte  EnsembleChat.svelte  ErrorResultPopout.svelte  FailuresPanel.svelte  FeaturePipelineTabContent.svelte  FsTabContent.svelte  GitTabContent.svelte  HealthTabContent.svelte  HeatstripBuffer.ts  HeatstripTimeline.svelte  IndexContentBrowser.svelte  IndexGraph.svelte  IndexGraphCanvas.svelte  IndexTabContent.svelte  IndexTabRenderer.svelte  IntegrationInspector.svelte  LaneGutter.svelte  LlmActivityTabContent.svelte  LlmChat.svelte  MarkerTimeline.svelte  McpTabContent.svelte  McpWaterfall.svelte  McpWaterfallStore.ts  ModeHintBar.svelte  ModelCard.svelte  ModelIndicator.svelte  NotifGroupButton.svelte  NotifManager.svelte  NotificationPane.svelte  (+77 more)
src/lib/__tests__/: EnsembleChat.test.ts  McpWaterfallStore.test.ts  ShortcutOverlay.test.ts  SparklineBuffer.test.ts  StatusLine.test.ts  TabBar.render.test.ts  Tree.enrichment.test.ts  alertRules.test.ts  blockJump.test.ts  blockText.test.ts  bus.test.ts  commandBlockStore.test.ts  correlationIndex.test.ts  drag-promote.test.ts  enrichmentStore.test.ts  errorClusterStore.test.ts  errorClustering.test.ts  errorHandoff.test.ts  key-stability.test.ts  llmModels.test.ts  llmRouting.test.ts  notifFilter.test.ts  notifPriority.test.ts  sessionTimeline.test.ts  setup.ts  splitTypes.test.ts  terminal-fit-defer.test.ts  timelineConfig.test.ts  vramModel.test.ts  zones.test.ts
tools/: cc-agent-hook.mjs  cc-status-bridge.mjs  check-translator-boundary.sh  coding-eval.mjs  kill-port.mjs  patreon-cover.html  patreon-profile.html  patreon-tier-covers.html  tool-call-probe.mjs
