[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/rift-bus",
    "crates/rift-core",
    "crates/rift-cli",
    "crates/rift-aegis",
    "crates/rift-mcp",
]

[workspace.package]
version = "0.1.6"
edition = "2021"
authors = ["Abyssal Arts"]
license = "Proprietary"
repository = "https://github.com/Critek-creator/Rift_TerminalV2"
rust-version = "1.77"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2" }
tauri-build = { version = "2" }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-updater = { version = "2" }
portable-pty = "0.9"
thiserror = "2"
tracing = "0.1"
interprocess = { version = "2", features = ["tokio"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
notify = "6"
globset = "0.4"
dunce = "1"
toml = "0.8"
directories = "5"
serde_yaml = "0.9"
getrandom = "0.2"
windows-sys = { version = "0.59" }
index-core = { path = "../abyssal-index/crates/index-core" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
