[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/rift-bus",
    "crates/rift-core",
    "crates/rift-cli",
    "crates/rift-aegis",
    "crates/rift-mcp",
    "crates/rift-router",
]

[workspace.package]
version = "1.2.0"
edition = "2021"
authors = ["Abyssal Arts"]
license = "MIT"
repository = "https://github.com/Critek-creator/Rift_TerminalV2"
rust-version = "1.77"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2" }
tauri-build = { version = "2" }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-updater = { version = "2" }
portable-pty = "0.9"
thiserror = "2"
tracing = "0.1"
interprocess = { version = "2", features = ["tokio"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
notify = "8"
globset = "0.4"
dunce = "1"
toml = "0.8"
directories = "5"
serde_yaml = "0.9"
getrandom = "0.2"
parking_lot = "0.12"
async-trait = "0.1"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
windows-sys = { version = "0.59" }
keyring = { version = "3", features = ["sync-secret-service", "windows-native"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
