[package]
name = "rift-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rift Terminal v2 — standalone terminal + GUI cockpit"
rust-version.workspace = true

[[bin]]
name = "rift-app"
path = "src/main.rs"

[lib]
name = "rift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-updater = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }
rift-bus = { path = "../crates/rift-bus" }
rift-core = { path = "../crates/rift-core" }
# Phase 7 — Aegis private translator (feature-gated optional path dep).
# Public clones see the empty `rift-aegis` stub (Cargo.toml + src/lib.rs
# tracked). Real implementation lives in gitignored sibling files
# (detect.rs, snapshot.rs) loaded only when the `private_modules`
# feature flag is on (see DEFERRED.md C-014). Our `aegis` feature below
# enables both `dep:rift-aegis` AND `rift-aegis/private_modules` so
# private dev's `cargo build --features aegis` activates the real impl
# while public CI's default-features build skips compilation entirely.
rift-aegis = { path = "../crates/rift-aegis", optional = true }
globset = { workspace = true }
dunce = { workspace = true }
directories = { workspace = true }
base64 = "0.22"
png = "0.17"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Phase 7 — Aegis private translator. Off by default. When on,
# enables `dep:rift-aegis` AND `rift-aegis/private_modules` (the
# latter activates the real impl in the gitignored sibling files
# alongside the tracked stub lib.rs). See DEFERRED.md C-014.
aegis = ["dep:rift-aegis", "rift-aegis/private_modules"]
