[package]
name = "rift-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rift Terminal v2 — standalone terminal + GUI cockpit"
rust-version.workspace = true
publish = false

[[bin]]
name = "rift-app"
path = "src/main.rs"

[lib]
name = "rift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-updater = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
rift-bus = { path = "../crates/rift-bus" }
rift-core = { path = "../crates/rift-core" }
rift-router = { path = "../crates/rift-router" }
index-core = { path = "../crates/index-core", optional = true }
# Phase 7 — Aegis private translator (feature-gated optional path dep).
# Public clones see the empty `rift-aegis` stub (Cargo.toml + src/lib.rs
# tracked). Real implementation lives in gitignored sibling files
# (detect.rs, snapshot.rs) loaded only when the `private_modules`
# feature flag is on (see DEFERRED.md C-014). Our `aegis` feature below
# enables both `dep:rift-aegis` AND `rift-aegis/private_modules` so
# private dev's `cargo build --features aegis` activates the real impl
# while public CI's default-features build skips compilation entirely.
rift-aegis = { path = "../crates/rift-aegis", optional = true }
globset = { workspace = true }
futures-util = { workspace = true }
dunce = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
base64 = "0.22"
png = "0.17"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol", "aegis-detect"]
custom-protocol = ["tauri/custom-protocol"]
# Aegis detection — public lightweight probe that checks for SKILL.md
# on disk and publishes aegis.detected envelopes. Compiles against the
# tracked stub (detect.rs / snapshot.rs) — no gitignored files needed.
# Included in default features so release binaries can detect Aegis.
aegis-detect = ["dep:rift-aegis"]
# Aegis private translator — full snapshot + log tail. Requires the
# gitignored private source files (detect_private.rs, snapshot_private.rs).
# Dev-only; never in default features. See DEFERRED.md C-014.
aegis-private = ["aegis-detect", "rift-aegis/private_modules"]
index = ["dep:index-core"]

# cargo-machete false-positive suppression:
# - windows-sys: cfg(windows)-only, invisible on Linux runners
# - rift-aegis: optional dep behind `aegis` feature, never compiled in default CI
# - png/base64: used in screenshot capture paths that machete can't trace through Tauri codegen
[package.metadata.cargo-machete]
ignored = ["windows-sys", "rift-aegis", "index-core", "png", "base64", "keyring"]
