[package]
name = "rift-bus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rift Integration Protocol — broadcast bus + envelope + (Phase 4) IPC server"
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
interprocess = { workspace = true }
notify = { workspace = true }
globset = { workspace = true }
dunce = { workspace = true }
