[package]
name = "rift-bus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rift Integration Protocol — broadcast bus + envelope + (Phase 4) IPC server"
rust-version.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
interprocess = { workspace = true }
notify = { workspace = true }
globset = { workspace = true }
dunce = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
serde_yaml = { workspace = true }
getrandom = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
reqwest = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
