[package]
name = "rift-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rift core — PTY layer + shell resolution"
rust-version.workspace = true

[dependencies]
portable-pty = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Diagnostics_ToolHelp", "Win32_Foundation"] }
