[package]
name = "rift-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rift core — PTY layer + shell resolution"
rust-version.workspace = true
publish = false

[dependencies]
portable-pty = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_Diagnostics_ToolHelp", "Win32_Foundation"] }

# cargo-machete suppression:
# - windows-sys: cfg(windows)-only, invisible on Linux CI runners
[package.metadata.cargo-machete]
ignored = ["windows-sys"]
