[package]
name = "rift-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ensemble Router — LLM routing rules engine (no external calls; bus-only)"
rust-version.workspace = true
publish = false

[dependencies]
rift-bus = { path = "../rift-bus" }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
